<resources>
    <string name="app_name">QQ</string>
    <string name="text1">登录</string>>
    <string name="text2">(性感庄总，在线教学~)</string>
    <string name="text3">+</string>
    <string name="text4">新用户注册</string>
    <string name="text5">无法登录？</string>
    <string name="text6">七七^_^</string>
    <string name="text7">注销</string>
    <string name="text8">好友</string>
    <string name="text9">动态</string>
    <string name="text10">Hey,friend!</string>
    <string name="text11">刷新</string>
    <string name="text13">查询</string>
</resources>
